--- a/weixin-external-platform-mp/pom.xml
+++ b/weixin-external-platform-mp/pom.xml
@@ -19,6 +19,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.bingkun</groupId>
             <artifactId>weixin-external-platform-api</artifactId>
             <version>1.1</version>
