--- a/weixin-external-platform-mp/pom.xml
+++ b/weixin-external-platform-mp/pom.xml
@@ -19,6 +19,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.bingkun</groupId>
+            <artifactId>weixin-external-platform-common</artifactId>
+            <version>1.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>3.0</version>
@@ -26,9 +32,10 @@
         </dependency>
 
         <dependency>
-            <groupId>com.bingkun</groupId>
-            <artifactId>weixin-external-platform-api</artifactId>
-            <version>1.1</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.12</version>
         </dependency>
+
     </dependencies>
 </project>
