--- a/weixin-external-platform-common/pom.xml
+++ b/weixin-external-platform-common/pom.xml
@@ -1,10 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <artifactId>weixin-external-platform</artifactId>
-        <groupId>com.bingkun</groupId>
+        <groupId>com.github.xiaobianchen</groupId>
         <version>1.3</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>weixin-external-platform-common</artifactId>
